fix: Origin introduction text font size too big

--- a/styles/less/components/application.less
+++ b/styles/less/components/application.less
@@ -74,7 +74,7 @@
 			}
 
 			& > p {
-				font-size: var(--font-size-28);
+				font-size: var(--font-size-18);
 				text-align: center;
 
 				& > span {
